[tool.poetry]
name = "hiraishin"
version = "0.1.0"
description = "A thin PyTorch-Lightning wrapper for building configuration-based DL pipelines with Hydra."
readme = "README.md"
authors = ["So Uchida <s.aiueo32@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.0.8"
hydra-core = "1.1.0.dev5"
overrides = "^3.1.0"
click = "^7.1.2"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
pytest = "^6.1.2"
pytest-datadir = "^1.3.1"
TorchSnooper = "^0.8"
jupyterlab = "^2.2.9"
matplotlib = "^3.3.3"

[tool.poetry.scripts]
hiraishin = "hiraishin.cli:cmd"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
